deployment/kubernetes/dcloud/bastion_deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "dcloud-app-user-1"
  labels:
    app: "dcloud-app-user-1"
spec:
  selector:
    matchLabels:
      app: "dcloud-app-user-1"
  replicas: 1
  template:
    metadata:
      labels:
        app: "dcloud-app-user-1"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - imagePullPolicy: "IfNotPresent"
          image: "bastion:latest"
          ports:
            - name: "ssh"
              containerPort: 2222
            - name: "http"
              containerPort: 9000
          name: "dcloud-app-user-1"
