deployment/kubernetes/dcloud/bastion_service.yml
apiVersion: v1
kind: Service
metadata:
  name: dcloud-app-user-1
spec:
  selector:
    app: dcloud-app-user-1
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
      protocol: TCP
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
